[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pacy = { path = "../../pacy" }
pacy-egui = { path = "../../pacy-egui" }
pacy-wgpu = { path = "../../pacy-wgpu" }

pollster = "0.2"
egui = "0.18"
egui_wgpu_backend = "0.18"
egui_winit_platform = "0.15"
winit = "0.26"
wgpu = "0.13"
