[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracy = ["dep:tracy-client", "profiling/profile-with-tracy"]

[dependencies]
pacy = { path = "../../pacy" }
pacy-egui = { path = "../../pacy-egui" }
pacy-wgpu = { path = "../../pacy-wgpu" }

flume = "0.10"
pollster = "0.2"
egui = "0.18"
egui_wgpu_backend = "0.18"
egui_winit_platform = "0.15"
spin_sleep = "0.3"
winit = "0.26"
wgpu = "0.13"

tracy-client = { version = "0.13", optional = true }
profiling = { version = "1" }

